Fix: Details: line, spacing, and padding. Change: imgcontainer spacing, date input padding

--- a/taipei-day-trip/style/style.css
+++ b/taipei-day-trip/style/style.css
@@ -589,6 +589,11 @@ body
 {
   width: 33%;
   border: #FFFFFF;
+  padding: 5px 10px;
+
+  /* font */
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .bookingbar--bookingpanel--bookingform--time--timelabel,
@@ -705,12 +710,14 @@ input[type='radio']:checked
   {
     height: auto;
     flex-direction: column;
+    padding: 0;
     margin: 0 0 40px;
   }
   .bookingbar--imgcontainer
   {
     width: 100%;
     min-height: 350px;
+    border-radius: 0%;
   }
   .bookingbar--bookingpanel
   {
@@ -723,5 +730,9 @@ input[type='radio']:checked
   .bookingbar--bookingpanel--bookingform
   {
     height: 300px;
+  }
+  .first
+  {
+    display: none;
   }
 }
